--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -22,17 +22,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Assets\Image\test.jpg" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ApplicationDefinition Include="Src\App.xaml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Assets\Image\test.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <PackageReference Include="Microsoft.Kiota.Serialization.Form" Version="1.21.1" />
   </ItemGroup>
 
   <ItemGroup>
