--- a/ImageHandle/ImageHandle.vcxproj.filters
+++ b/ImageHandle/ImageHandle.vcxproj.filters
@@ -24,12 +24,30 @@
     <ClInclude Include="Src\Image\Image.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Core\Clock\Clock.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Core\Clock\Timer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Image\Processor.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Src\Image\Image.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Core\Clock\Clock.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Core\Clock\Timer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Image\Processor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
